<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".authentication.RegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_30sdp">

        <TextView
            android:id="@+id/ic_registration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginLeft="@dimen/_49sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:text="@string/ic_registration_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_25sdp"
            app:layout_constraintBottom_toTopOf="@+id/ic_sign_in"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/ic_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginLeft="@dimen/_49sdp"
            android:text="@string/ic_sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginLeft="@dimen/_49sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginEnd="@dimen/_49sdp"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            android:theme="@style/LoginPageEditTextTheme"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginLeft="@dimen/_49sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginEnd="@dimen/_49sdp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            android:theme="@style/LoginPageEditTextTheme"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginLeft="@dimen/_49sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/email_id"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginEnd="@dimen/_49sdp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            android:theme="@style/LoginPageEditTextTheme"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginLeft="@dimen/_49sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/phone"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_49sdp"
            android:layout_marginEnd="@dimen/_49sdp"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            android:theme="@style/LoginPageEditTextTheme"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_51sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_51sdp"
            android:background="@drawable/background_login_button"
            android:minHeight="40dp"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/register_label"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tv_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:text="@string/ad_signin"
                android:textColor="@color/appColor"
                android:textSize="@dimen/_14sdp"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>