<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".authentication.LoginActivity">

    <TextView
        android:id="@+id/ic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ic_title"
        android:textSize="@dimen/_25sdp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ic_sign_in"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_43sdp"
        android:layout_marginStart="@dimen/_43sdp" />

    <TextView
        android:id="@+id/ic_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginLeft="@dimen/_49sdp"
        android:layout_marginStart="@dimen/_49sdp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/email_id"
        android:layout_marginTop="@dimen/_24sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_49sdp"
        android:layout_marginLeft="@dimen/_49sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_49sdp"
        android:layout_marginStart="@dimen/_49sdp"
        android:inputType="textCapSentences"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16sdp"
        android:theme="@style/LoginPageEditTextTheme"
        android:maxLines="1"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/password"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_49sdp"
        android:layout_marginLeft="@dimen/_49sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_49sdp"
        android:layout_marginStart="@dimen/_49sdp"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16sdp"
        android:theme="@style/LoginPageEditTextTheme"
        android:maxLines="1"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginEnd="@dimen/_49sdp"
        android:layout_marginTop="@dimen/_2sdp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_51sdp"
        android:layout_marginStart="@dimen/_51sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_login_button"
        android:minHeight="40dp"
        android:paddingBottom="@dimen/_7sdp"
        android:paddingTop="@dimen/_7sdp"
        android:text="@string/login_label"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4sdp"
            android:text="@string/ad_register"
            android:textColor="@color/appColor"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

</androidx.constraintlayout.widget.ConstraintLayout>